<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">TAGDroid</string>
    <string name="authorName" translatable="false">Quentin DESBOIS</string>
    <string name="author2Name" translatable="false">Félix PIÉDALLU</string>
    <string name="collaboName" translatable="false">Alexandre LOUVRIER</string>

    <string name="drawer_close">Fermer le panneau</string>

    <string name="menu_pdf">Plan PDF</string>

    <!-- WIDGET -->
    <string name="choose_fav">Choisissez votre station favorite :</string>

    <!-- MENU -->
    <string name="stations">Stations</string>
    <string name="proximite">Proximité</string>
    <string name="favoris">Favoris</string>
    <string name="map">Plan</string>
    <string name="trafic">Info Trafic</string>
    <string name="news">Actualités</string>
    <string name="news_details">Détails</string>
    <string name="tarif">Titres de Transport</string>
    <string name="ticket">Les Tickets</string>
    <string name="pass">Les Pass\'</string>
    <string name="combines">Les Combinés</string>
    <string name="rate">Noter l\'application</string>
    <string name="about">À propos</string>
    <string name="settings">Paramètres</string>
    <string name="reseau">Réseau</string>
    <string name="divers">Divers</string>
    <string name="menu_tram">Tramways</string>
    <string name="menu_bus">Bus</string>
    <string name="menu_others">Lieux</string>
    <string name="menu_map">Types de carte</string>
    <string name="menu_rss">Flux RSS</string>

    <!-- Stations -->
    <string name="tram">Tramway</string>
    <string name="bus">Bus</string>
    <string name="addtofavoris">Ajouter aux Favoris</string>
    <string name="noconnexion">Connexion internet indisponible, Réessayer</string>

    <!-- Stations Details -->
    <string name="correspondances">Correspondances</string>
    <string name="horaires">Horaires</string>
    <string name="prochain">Prochain</string>
    <string name="suivant">Suivant</string>
    <string name="addfavoris">Station ajoutée aux favoris</string>
    <string name="delfavoris">Station supprimée des favoris</string>
    <string name="loading">Chargement en cours…</string>
    <string name="nohoraire">Pas d\'horaires disponibles</string>

    <!-- Proximite et Favoris -->
    <string name="please_turn_on_gps">S\'il vous plaît, Activez le GPS</string>
    <string name="nofavs">Aucun Favori</string>
    <string name="noproxs">Aucune Localisation</string>
    <string name="noaddress">Aucune adresse trouvée</string>
    <string name="searchaddress">Recherche de l\'adresse…</string>

    <!-- Plan -->
    <string name="tramlines">Lignes de tramways :</string>
    <string name="buslines">Lignes de bus :</string>
    <string name="places">Lieux :</string>
    <string name="soon">Prochainement…</string>
    <string name="mapstype">Types de carte :</string>

    <!-- Actualites -->
    <string name="nonews">Pas d\'Actualités !</string>

    <!-- Disruptions -->
    <string name="nodisruptions">Pas d\'alerte sur le réseau !</string>



    <!-- Flux RSS -->
    <string name="more">Plus d\'informations</string>
    <string name="details">Détails</string>
    <string name="fluxchoice">Choix du flux RSS :</string>

    <!-- Changelog -->
    <string name="changelog_full_title">Mises à jour :</string>
    <string name="changelog_ok_button">OK</string>
    <string name="changelog_title">Mises à jour :</string>
    <string name="changelog_show_full">Plus…</string>

    <!-- Tarifs -->
        <!-- Tickets -->
        <string name="tickets_choose">Choisissez votre ticket :</string>


        <!-- Abonnements -->
        <string name="pass_situation">Votre situation :</string>
        <string name="pass_qf">Votre Quotient Familial (QF) :</string>
        <string name="pass_mensuel">Mensuel</string>
        <string name="pass_annuel">Annuel</string>
        <string name="pass_2mois">2 mois offerts</string>
        <string name="pass_4mois">4 mois offerts</string>

        <!-- Combinés -->
        <string name="combines_choose">Choisissez votre combiné :</string>



    <string name="cannelle">Circulez librement entre 8h30 et 17h30 du lundi au samedi et toute la journée les dimanches et jours fériés.</string>
    <string name="soleil">Offre réservée aux salariés des entreprises engagées dans une démarche de Plan de Déplacements Entreprise. Renseignez-vous auprès de votre employeur !</string>

    <!-- About -->
    <string name="auteur">Auteur</string>
    <string name="codev">Co-Développeur</string>
    <string name="remerciement">Remerciement</string>
    <string name="contact">Contact</string>
    <string name="description">Description</string>
    <string name="informations">Informations</string>
    <string name="about_desc">Application non-officielle</string>
    <string name="about_desc2">Compatible Android 4.0+</string>
    <string name="about_description">Cette application permet aux usagers du réseau de Transport de l\'Agglomération Grenobloise (TAG) d\'être informés en temps réel sur l\'attente des Tramways et Bus, ainsi que sur l\'info trafic et les actualités de la société SEMITAG.</string>
    <string name="footer">TAGdroid est une application indépendante. Elle n\'a aucun lien avec les sociétés : TAG, SEMITAG, SMTC, La Métro. Tous les produits, logos et images présents dans cette application sont la propriété de leur marque respective.</string>
    <string name="mail">Envoyer un mail avec :</string>

    <!-- Welcome -->
    <string name="welcome_bienvenue">Bienvenue</string>
    <string name="welcome_horaires">Prochain passage dans…</string>
    <string name="welcome_plan">Découvrez les stations les plus proches</string>
    <string name="welcome_trafic">Alertes trafic et actualités: restez informé !</string>
    <string name="welcome_tarifs">Des tarifs pour tous</string>
    <string name="welcome_ok">En avant !</string>

    <string name="welcome_texte1">Merci d\'avoir installé TAGdroid, l\'application non-officielle des transports en commun de Grenoble.\n\nDécouvrez les différentes fonctionnalitées de l\'application sur les pages suivantes.</string>
    <string name="welcome_texte2">La fonction principale permet de connaître en temps-réel le temps d\'attente des 2 prochains tramways ou bus et les horaires théoriques des suivants.\n\nAjoutez également vos stations préférées dans les favoris</string>
    <string name="welcome_texte3">Grâce à votre géolocatisation et à la carte interactive, vous pouvez désormais vous diriger vers la station la plus proche.\n\nTéléchargez également le plan en pdf de la ligne que vous souhaitez.</string>
    <string name="welcome_texte4">Une manifestation ou une tempête de neige causent des ralentissements du trafic sur votre ligne? Soyez le premier informé !\n\nDécouvrez aussi les dernières nouvelles publiées de la TAG et la SMTC</string>
    <string name="welcome_texte5">Jeune, moins jeune, étudiant ou encore salarié ? Des tarifs selon votre profil vous sont proposés par la TAG.\n\nConsultez la section "Tarifs" pour connaître les prix des titres de transport, abonnements et combinés.</string>
    <string name="welcome_texte6">TAGdroid est une application gratuite sans aucune affiliation avec la SemiTAG, TAG et SMTC.\n\nEn cas de problème, n\'hesitez pas à envoyer un email.</string>
    <string name="allons_y">Allons-y !</string>

    <string name="drawer_item_actualites">Actualités</string>
    <string name="drawer_item_favoris">Favoris</string>
    <string name="drawer_item_plan">Plan</string>
    <string name="drawer_item_proximite">À Proximité</string>
    <string name="drawer_item_stations">Stations</string>
    <string name="drawer_item_tarifs">Tarifs</string>
    <string name="drawer_item_trafic">Trafic</string>
    <string name="menu_skip">Passer</string>
    <string name="ns_menu_main_header2">Informations</string>
    <string name="ns_menu_reseau_header">Réseau</string>

    <string name="mensuel">Mensuel</string>
    <string name="annuel">Annuel</string>
    <string name="wait_for_download_to_finish">Veuillez attendre la fin du téléchargement de la base de données…</string>
    <string name="chrono" translatable="false">Chrono</string>
    <string name="proximo" translatable="false">Proximo</string>
    <string name="flexo" translatable="false">Flexo</string>
    <string name="other_lines">Autres lignes</string>
    <string name="choix_directions">Choisissez votre direction :</string>
    <string name="lines">Toutes les lignes</string>
    <string name="direction">direction</string>
    <string name="ligne">Ligne</string>

    <!-- Settings -->
    <string name="change_langue">Langue actuelle :</string>
    <string name="afficher_horaires_theoriques">Afficher les horaires théoriques</string>
    <string name="default_horaires_string" translatable="false">…</string>
    <string name="minutes_abr">min</string>
    <string name="loading_in_progress">Chargement en cours</string>
    <string name="googleplay_not_detected">Google Play Service non détecté. Dysfonctionnement de l\'application possible.</string>
    <string name="welcome_internet_connexion_problem_alertdialog">L\'application n\'est pas en mesure de télécharger la base de données nécessaire au bon fonctionnement de l\'application.\n\nTAGdroid va se fermer.\n\nActivez votre connexion Internet par WIFI ou données mobiles (4G, 3G, Edge) et relancez l\'application.</string>
    <string name="welcome_internet_connexion_problem_alerttitle">Pas de connexion Internet</string>
    <string name="welcome_load_finished">Chargement terminé</string>
    <string name="toast_example_action">Example action.</string>
    <string name="loading_error">Erreur de chargement :\n</string>
    <string name="tagdroid_changelog">Changelog de TagDroid</string>
    <string name="version_">"Version "</string>
    <string name="apropos_website_quentin" translatable="false">http://www.quentindesbois.fr</string>
    <string name="apropos_tagdroid_mail" translatable="false">tagdroid.grenoble@gmail.com</string>
    <string name="apropos_felix_mail" translatable="false">felix@piedallu.me</string>
    <string name="apropos_felix_website" translatable="false">http://84.100.10.90</string>
    <string name="unsupported_device">This device is not supported.</string>
    <string name="database_download">Chargement des données</string>
    <string name="cache_cleared">Données cache supprimées</string>
    <string name="collaborateur">Collaborateur</string>
    <string name="drawer_open">Ouvrir le panneau</string>
</resources>