<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_tram"
        android:icon="@drawable/menu_tram"
        app:showAsAction="ifRoom"
        android:title="@string/menu_tram"/>
     <item
        android:id="@+id/menu_bus"
        android:icon="@drawable/menu_bus"
        app:showAsAction="ifRoom"
        android:title="@string/menu_bus"/>
     
    <item
        android:id="@+id/menu_others"
        android:icon="@drawable/menu_others"
        app:showAsAction="ifRoom"
        android:title="@string/menu_others"/>
     <item
        android:id="@+id/menu_map"
        android:icon="@drawable/menu_map"
        app:showAsAction="ifRoom"
        android:title="@string/menu_map"/>
</menu>
