<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/welcome_bienvenue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_bienvenue"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/bleu_tag"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/welcome_text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/welcome_texte1"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/arrow_down5"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="20dp"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/welcome_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_texte2"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/welcome_text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/welcome_texte3"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/welcome_text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/welcome_texte4"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/gesture" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>