<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:fbutton="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c2ffdc"
    android:paddingBottom="20dp"
    android:paddingLeft="40dp"
    android:paddingRight="40dp" >

    <ImageView android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:src="@drawable/welcome6"
        android:contentDescription="@string/welcome_bienvenue"/>
    <TextView android:id="@+id/titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image"
        android:text="@string/welcome_ok"
        android:textSize="24sp" />

    <TextView android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titre"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/welcome_texte6" />

    <info.hoang8f.widget.FButton
        android:id="@+id/welcome_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true"

        fbutton:buttonColor="#2ecc71"
        fbutton:shadowColor="#27ae60"
        fbutton:shadowEnabled="true"
        fbutton:shadowHeight="6dp"
        fbutton:cornerRadius="10dp"

        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="OK" />
</RelativeLayout>

