<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:padding="10dp">
                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">
                    <ImageView android:id="@+id/logoApp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="@dimen/activity_horizontal_margin"
                        android:contentDescription="@null"
                        android:src="@drawable/ic_launcher_tagdroid" />

                    <ImageView android:id="@+id/TitleLogo"
                        android:layout_height="@dimen/title_textsize"
                        android:layout_width="wrap_content"
                        android:layout_alignTop="@+id/logoApp"
                        android:layout_toRightOf="@+id/logoApp"
                        android:layout_toEndOf="@+id/logoApp"
                        android:scaleType="fitStart"
                        android:contentDescription="@null"
                        android:src="@drawable/tagdroid_about" />

                    <TextView android:id="@+id/AppNonOfficielle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/logoApp"
                        android:layout_toEndOf="@+id/logoApp"
                        android:layout_below="@+id/TitleLogo"
                        android:fontFamily="sans-serif-light"
                        android:textColor="@color/gris_fonce"
                        android:text="@string/about_desc" />

                    <TextView android:id="@+id/Compatibilité"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/logoApp"
                        android:layout_toEndOf="@+id/logoApp"
                        android:layout_below="@id/AppNonOfficielle"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/about_desc2"
                        android:textColor="@color/gris_fonce" />
                </RelativeLayout>

                <Button
                    android:id="@+id/showlog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/gris_fonce" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin">
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >
                <View android:id="@+id/verticalDivider"
                    android:layout_height="match_parent"
                    android:layout_width="1dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignBottom="@+id/QuentinCard"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_centerHorizontal="true"
                    android:background="@color/lighter_gray" />
                <View android:id="@+id/horizontalDivider"
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/verticalDivider"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/lighter_gray" />

                <LinearLayout android:id="@+id/QuentinCard"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_toLeftOf="@id/verticalDivider"
                    android:layout_toStartOf="@id/verticalDivider"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:contentDescription="@null"
                        android:src="@drawable/ic_developper1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/authorName"
                        android:textColor="@color/gris_fonce"
                        android:textSize="@dimen/about_author_textsize" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/auteur"
                        android:textColor="@color/gris_fonce"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:orientation="horizontal">

                        <ImageView android:id="@+id/websiteQuentin"
                            android:layout_width="match_parent"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:contentDescription="@null"
                            android:src="@drawable/about_btn_website" />

                        <ImageView android:id="@+id/mailQuentin"
                            android:layout_width="match_parent"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:contentDescription="@null"
                            android:src="@drawable/about_btn_mail" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout android:id="@+id/FelixCard"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_toRightOf="@id/verticalDivider"
                    android:layout_toEndOf="@id/verticalDivider"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:contentDescription="@null"
                        android:src="@drawable/ic_developper2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/author2Name"
                        android:textColor="@color/gris_fonce"
                        android:textSize="@dimen/about_author_textsize" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/codev"
                        android:textColor="@color/gris_fonce"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:orientation="horizontal">

                        <ImageView android:id="@+id/websiteFélix"
                            android:layout_width="match_parent"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:contentDescription="@null"
                            android:src="@drawable/about_btn_website" />

                        <ImageView android:id="@+id/mailFélix"
                            android:layout_width="match_parent"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:contentDescription="@null"
                            android:src="@drawable/about_btn_mail" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout android:id="@+id/AlexandreCard"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_below="@id/horizontalDivider"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/gris_fonce"
                        android:text="@string/remerciement"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:textColor="@color/gris_fonce"
                        android:textSize="@dimen/about_author_textsize"
                        android:text="@string/collaboName"/>
                </LinearLayout>

            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/about_description"
                    android:textColor="@color/gris_fonce" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/gris_fonce"
                    android:textSize="@dimen/list_verysmall_desc_textsize"
                    android:textStyle="italic"
                    android:text="@string/footer" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>

