<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_margin"
        android:orientation="vertical">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_spacing">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:layout_margin="10dp">
                <TextView android:text="@string/tram"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gris_fonce"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp" />
                <com.tagdroid.android.GridView.ExpandableGridView
                    android:id="@+id/tramGrid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:verticalSpacing="15dp"
                    android:horizontalSpacing="15dp"
                    android:columnWidth="48dp"
                    android:numColumns="auto_fit" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_spacing">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:layout_margin="10dp">
                <TextView android:text="@string/chrono"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gris_fonce"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp" />
                <com.tagdroid.android.GridView.ExpandableGridView
                    android:id="@+id/chronoGrid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:verticalSpacing="15dp"
                    android:horizontalSpacing="15dp"
                    android:columnWidth="48dp"
                    android:numColumns="auto_fit" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_spacing">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:layout_margin="10dp">
                <TextView android:text="@string/proximo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gris_fonce"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp" />
                <com.tagdroid.android.GridView.ExpandableGridView
                    android:id="@+id/proximoGrid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:verticalSpacing="15dp"
                    android:horizontalSpacing="15dp"
                    android:columnWidth="48dp"
                    android:numColumns="auto_fit" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_spacing">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:layout_margin="10dp">
                <TextView android:text="@string/flexo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gris_fonce"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp" />
                <com.tagdroid.android.GridView.ExpandableGridView
                    android:id="@+id/flexoGrid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:verticalSpacing="15dp"
                    android:horizontalSpacing="15dp"
                    android:columnWidth="48dp"
                    android:numColumns="auto_fit" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>